--- a/assets/style.css
+++ b/assets/style.css
@@ -280,3 +280,63 @@ a{
 }
 
 
+
+/* footer style */
+.foot{
+    padding: 124px 0 126px;
+    background-color: #f4f2f2;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-top: 0 solid #ddd;
+    margin-top: 60px;
+}
+
+h4{
+    margin-bottom: 14px;
+    color: #1d1d1d;
+    font-family: "Josefin Sans",sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 1.5em;
+    letter-spacing: .12em;
+    text-align: left;
+}
+
+.cot,.help{
+    text-align: left;
+    color: #8b8b8b;
+}
+
+.cot p a{
+    color: #8b8b8b;
+}
+
+
+.list-group-item-action:hover{
+
+   color: #aeaeae;;
+}
+
+.icon{
+    border: 1px solid #8b8b8b;
+   
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+   
+    display: inline-block;
+    text-align: center;
+    margin-right: 5px;
+}
+
+.icon:hover{
+    color: black;
+}
+
+.footend{
+    margin-top: 10px;
+    background-color: white;
+   
+}
